// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should grey out icon when disabled 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-4 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: #E6E6E6;
  padding-left: 48px;
  padding-right: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-4::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-0"
  disabled=""
  for="input_2"
>
  <span
    class="circuit-1"
  >
    Search
  </span>
  <div
    class="circuit-2"
  >
    <svg
      class="circuit-3"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 7A5 5 0 1 1 2 7a5 5 0 0 1 10 0zm-.81 5.608a7 7 0 1 1 1.418-1.418l3.102 3.103c.186.189.29.443.29.709a.999.999 0 0 1-.998.998c-.266 0-.52-.104-.71-.29l-3.102-3.102zM14 5.238v-.472c.004.157.004.315 0 .472z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="circuit-4"
      disabled=""
      id="input_2"
      type="text"
      value=""
    />
  </div>
</label>
`;

exports[`SearchInput should render with default styles 1`] = `
.circuit-0 {
  font-size: 14px;
  line-height: 20px;
  display: block;
}

.circuit-1 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-2 {
  position: relative;
}

.circuit-3 {
  position: absolute;
  pointer-events: none;
  color: #666;
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-4 {
  font-size: 16px;
  line-height: 24px;
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  padding-right: 48px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-4::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-4:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-0"
  for="input_1"
>
  <span
    class="circuit-1"
  >
    Search
  </span>
  <div
    class="circuit-2"
  >
    <svg
      class="circuit-3"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 7A5 5 0 1 1 2 7a5 5 0 0 1 10 0zm-.81 5.608a7 7 0 1 1 1.418-1.418l3.102 3.103c.186.189.29.443.29.709a.999.999 0 0 1-.998.998c-.266 0-.52-.104-.71-.29l-3.102-3.102zM14 5.238v-.472c.004.157.004.315 0 .472z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="circuit-4"
      id="input_1"
      type="text"
      value=""
    />
  </div>
</label>
`;
